# abyss-angel

./: .env  Cargo.toml  README.md  hehe.rs  log.txt  schima.json
abyss-macro/: Cargo.toml
abyss-macro/src/: lib.rs
migration/: .env  Cargo.toml
migration/src/: lib.rs  m20220101_000001_settings.rs  m20251118_075143_upcoming_games.rs  m20251130_100818_admins.rs  m20251130_100818_users.rs  m20251225_021549_game_entries.rs  m20251226_220520_example_game.rs
src/: main.rs  sexymac.rs  user.rs
src/auth/: admin.rs  check.rs  create_user.rs  get_by_cookie.rs  get_by_user.rs  login.rs  mod.rs  reset_password.rs  users.rs
src/backenddb/: example_game.rs  game.rs  game_macro.rs  mod.rs
src/entity/: game_scouts.rs  genertic_header.rs  mod.rs  mvp_data.rs  mvp_scouters.rs  pit2025.rs  pit_header.rs  pit_upcoming.rs  prelude.rs  sea_orm_active_enums.rs  unsent_warning.rs  upcoming_game.rs  upcoming_team.rs  user.rs  users.rs  warning.rs
src/frontend/: allentry.rs  averages.rs  delete.rs  edit.rs  edit_form.rs  edit_page.rs  edit_submit.rs  get_all_users.rs  graph.rs  mod.rs  reset_password.rs  scout.rs  scout_auto.rs  search.rs
src/models/: dyn_settings.rs  mod.rs  prelude.rs  upcoming_game.rs  upcoming_team.rs
src/pit/: delete.rs  mod.rs  (+13 more)
static/: create.html  graph.html  index.html  login.html  pit_insert.html  queue.html  scout.html  scout_auto.html  setevent.html
templates/: edit.html.tera  edittable.html.tera  error.html.tera  graph.html.tera  pit_edit.html.tera  pit_view.html.tera  select_scout.html.tera  selectscrob.html.tera  suc.html.tera  table.html.tera
(+58 files in other folders)
