[package]
name = "abyss-angel"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-schema = {version = "0.16.2"}
abyss-macro = { path = "abyss-macro" }
ctor = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.145"
