[package]
name = "abyss-angel"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
abyss-macro = { path = "abyss-macro" }
ctor = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.145"
phf = { version = "0.12", features = ["macros"] }
reqwest = {version = "0.12.24", features = ["json"] }
uuid = {version = "1.18.1", features = ["v4"] }
bcrypt = "0.17.1"


[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
